edit kubernetes cluster

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -11,7 +11,7 @@ on:
 env:
   AWS_REGION: "eu-north-1"
   ECR_REPOSITORY: "140023404084.dkr.ecr.eu-north-1.amazonaws.com/frontend"
-  EKS_CLUSTER_NAME: "dev-AKS-cluster"
+  EKS_CLUSTER_NAME: "eks-test-app"
 
 # Define deployment of image
 jobs:
